--- a/package.json
+++ b/package.json
@@ -1,56 +1,56 @@
 {
-    "name": "website-ekskul",
-    "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
-    "scripts": {
-        "start": "webpack serve --config webpack.config.js --env env=development",
-        "build": "webpack --config webpack.config.js --env env=production",
-        "typecheck": "tsc --noEmit -p .",
-        "lint": "eslint --max-warnings 0 \"src/**/*.{ts,tsx}\"",
-        "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
-        "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
-        "jest": "jest --coverage --passWithNoTests",
-        "test": "yarn lint && yarn typecheck && yarn format:check && yarn jest"
-    },
-    "keywords": [],
-    "author": "Mohammad Faisal",
-    "license": "ISC",
-    "dependencies": {
-        "clean-webpack-plugin": "^4.0.0",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
-    },
-    "devDependencies": {
-        "@babel/core": "^7.13.16",
-        "@babel/plugin-transform-runtime": "^7.13.15",
-        "@babel/preset-env": "^7.13.15",
-        "@babel/preset-react": "^7.13.13",
-        "@babel/preset-typescript": "^7.13.0",
-        "@babel/runtime": "^7.13.16",
-        "@types/jest": "^27.0.1",
-        "@types/react": "^17.0.3",
-        "@types/react-dom": "^17.0.3",
-        "@typescript-eslint/eslint-plugin": "^4.22.0",
-        "@typescript-eslint/parser": "^4.22.0",
-        "babel-loader": "^8.2.2",
-        "css-loader": "^5.2.4",
-        "eslint": "^7.24.0",
-        "eslint-config-prettier": "^8.2.0",
-        "eslint-plugin-import": "^2.22.1",
-        "eslint-plugin-jsx-a11y": "^6.4.1",
-        "eslint-plugin-prettier": "^3.4.0",
-        "eslint-plugin-react": "^7.23.2",
-        "eslint-plugin-react-hooks": "^4.2.0",
-        "html-webpack-plugin": "^5.3.1",
-        "jest": "^27.1.0",
-        "prettier": "^2.2.1",
-        "style-loader": "^2.0.0",
-        "ts-jest": "^27.0.5",
-        "typescript": "^4.2.4",
-        "webpack": "^5.34.0",
-        "webpack-cli": "^4.6.0",
-        "webpack-dev-server": "^3.11.2",
-        "webpack-merge": "^5.7.3"
-    }
+  "name": "template",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "webpack serve --config=webpack/webpack.config.js --env env=development",
+    "build": "webpack --config=webpack/webpack.config.js --env env=production",
+    "typecheck": "tsc --noEmit -p .",
+    "lint": "eslint --max-warnings 0 \"src/**/*.{ts,tsx}\"",
+    "format": "prettier --write \"./src/**/*.{js,jsx,ts,tsx,json,css,scss,md}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx}\"",
+    "jest": "jest --coverage --passWithNoTests",
+    "test": "yarn lint && yarn typecheck && yarn format:check && yarn jest"
+  },
+  "keywords": [],
+  "author": "Carissa",
+  "license": "MIT",
+  "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.13.16",
+    "@babel/plugin-transform-runtime": "^7.13.15",
+    "@babel/preset-env": "^7.13.15",
+    "@babel/preset-react": "^7.13.13",
+    "@babel/preset-typescript": "^7.13.0",
+    "@babel/runtime": "^7.13.16",
+    "@types/jest": "^27.0.1",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "babel-loader": "^8.2.2",
+    "css-loader": "^5.2.4",
+    "eslint": "^7.24.0",
+    "eslint-config-prettier": "^8.2.0",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "html-webpack-plugin": "^5.3.1",
+    "jest": "^27.1.0",
+    "prettier": "^2.2.1",
+    "style-loader": "^2.0.0",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.2.4",
+    "webpack": "^5.34.0",
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2",
+    "webpack-merge": "^5.7.3"
+  }
 }
